<resources>
    <string name="app_name">PickPin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile_desc"> Nuclear Engineer || Mobile App developer || Entrepreneur || Pan African || MEST || Data driven </string>
    <string name="profile_title">Ahmed K Madani</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_login_fb">Login with Facebook</string>
    <string name="btn_login_tw">Login with Twitter</string>
    <string name="btn_login_gm">Login with Gmail</string>
    <string name="btn_link_to_register">Don\'t have an account? SignUp</string>
</resources>
